crates/ruma-state-res/tests/it/resolve/snapshots/msc4297_problem_a_state_res_v2_1@resolved_state.snap
---
source: crates/ruma-state-res/tests/it/resolve/snapshot_tests.rs
description: Resolved state
---
[
  {
    "type": "m.room.create",
    "state_key": "",
    "event_id": "$00-m-room-create",
    "content": {
      "room_version": "12"
    }
  },
  {
    "type": "m.room.join_rules",
    "state_key": "",
    "event_id": "$01-m-room-join_rules",
    "content": {
      "join_rule": "invite"
    }
  },
  {
    "type": "m.room.member",
    "state_key": "@alice:example.com",
    "event_id": "$01-m-room-member-leave-alice",
    "content": {
      "displayname": "alice",
      "membership": "leave"
    }
  },
  {
    "type": "m.room.member",
    "state_key": "@bob:example.com",
    "event_id": "$01-m-room-member-change-display-name-bob",
    "content": {
      "displayname": "bob++",
      "membership": "join"
    }
  },
  {
    "type": "m.room.member",
    "state_key": "@charlie:example.com",
    "event_id": "$01-m-room-member-change-display-name-charlie",
    "content": {
      "displayname": "charlie++",
      "membership": "join"
    }
  },
  {
    "type": "m.room.power_levels",
    "state_key": "",
    "event_id": "$00-m-room-power_levels",
    "content": {}
  }
]
